--- a/public/sass/components/_calendar.scss
+++ b/public/sass/components/_calendar.scss
@@ -3,6 +3,7 @@
     width: 100vw;
     height: 105vw;
     transition: 0.75s;
+    animation-timing-function: ease-out;
 }
 
 .collapsed {
